--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,25 +1,37 @@
 @import "./variables";
 @import "./utilities";
-html{
+
+html {
   color: $font-color;
 }
-body{
-  font-family: "Microsoft Yahei","Helvetica Neue", "宋体", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+body {
+  font-family: "Microsoft Yahei", "Helvetica Neue", "宋体", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-color: #f1f1f1;
 }
 
+a {
+  color: #08599b;
+  cursor: pointer;
+  &:hover {
+    text-decoration: underline;
+  }
+}
 
-.section-warpper{
+.section-warpper {
   border: 1px #ebedf1;
   border-radius: 2px;
-  box-shadow: 0 1px 2px rgba(71,73,72,.25);
+  box-shadow: 0 1px 2px rgba(71, 73, 72, .25);
   background-color: #fff;
 }
 
-.section-title{
+.section-title {
   padding-left: 10px;
   height: 26px;
   line-height: 26px;
   font-size: px2rem(14px);
 }
 
+.article-plain-content {
+  min-width: 670px;
+}
