--- a/src/css/utilities.scss
+++ b/src/css/utilities.scss
@@ -139,4 +139,11 @@
   overflow: auto;
 }
 
+.section-wrapper {
+  border: 1px #ebedf1;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(71, 73, 72, 0.25);
+  background-color: white;
+}
+
 
