服务器端端Css module 还是不行啊

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,6 +1,6 @@
 @import "reset.css";
-@import "./variables";
-@import "./utilities";
+@import "./variables.scss";
+@import "./utilities.scss";
 
 html {
   color: $font-color;
