--- a/client/css/index.css
+++ b/client/css/index.css
@@ -1,40 +1,20 @@
-@import "reset.css";
+@import "./reset.css";
 @import "./variables.css";
 @import "./utilities.css";
+@import "./button.css";
 
 html {
-  color: var(--font-color);
+  font-size: 62.5%;
 }
 
 body {
   font-family: "Microsoft Yahei", "Helvetica Neue", "宋体", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: #f1f1f1;
+  font-size: 1.6rem;
 }
+
+
 
 a {
-  color: #08599b;
   cursor: pointer;
-  &:hover {
-    text-decoration: underline;
-  }
-}
-
-.section-warpper {
-  border: 1px #ebedf1;
-  border-radius: 2px;
-  box-shadow: 0 1px 2px rgba(71, 73, 72, .25);
-  background-color: #fff;
-}
-
-.section-title {
-  padding: 15px;
-  line-height: 26px;
-  //font-size: px2rem(14px);
-}
-
-.article-plain-content {
-  min-width: 670px;
-  max-width: 800px;
-  border: 1px #ebedf1 solid;
-  padding-top: 20px;
+  text-decoration: none;
 }
