--- a/client/layout/mainLayout.css
+++ b/client/layout/mainLayout.css
@@ -37,16 +37,23 @@ header {
   }
 
   .menu-item {
-    color: #666666 ;
+
     height: 100%;
     padding-left: 18px;
     padding-right: 18px;
     vertical-align: middle;
     white-space:nowrap;
 
+    a{
+      color: #666666;
+    }
+
     &.active {
-      color: var(--active-color) !important;
       border-bottom: solid 2px var(--active-color);
+
+      a{
+        color: var(--active-color);
+      }
     }
 
   }
