添加下载页面

--- a/client/css/utilities.css
+++ b/client/css/utilities.css
@@ -249,6 +249,12 @@
   height: 0;
 }
 
+.text-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .flex {
   display: flex;
 }
