--- a/client/layout/mainLayout.css
+++ b/client/layout/mainLayout.css
@@ -8,7 +8,6 @@
 }
 
 header {
-  margin-bottom: 34px;
   color: white;
 
 
@@ -20,6 +19,7 @@ header {
   }
 
   .header-menu {
+    background-color: white;
     box-shadow: 0px 2px 10px 0px rgba(106, 106, 106, 0.28);
 
     &>div{
@@ -59,6 +59,11 @@ header {
   }
 }
 
+main{
+  padding-top: 34px;
+  padding-bottom: 40px;
+  flex: 1 0 auto;
+}
 
 footer{
   background: #1f2933;
@@ -82,4 +87,9 @@ footer{
   background-color: #ffffff;
   box-shadow: 0px 2px 5px 0px rgba(134, 134, 134, 0.35);
   border-radius: 3px;
+}
+
+.left-wrapper {
+  width: 320px;
+  flex-basis: 320px;
 }
