支持服务器渲染

--- a/client/default.hbs
+++ b/client/default.hbs
@@ -11,7 +11,7 @@
     <title>{{title}}</title>
 </head>
 <body>
-<div id="react-container">{{{content}}}</div>
+<div id="react-container" class="{{rootClass}}">{{{content}}}</div>
 <script id="INITIAL_STATE">window.__INITIAL_STATE__ = {{{initialState}}}</script>
 </body>
 </html>
