--- a/client/page/downloadApp.css
+++ b/client/page/downloadApp.css
@@ -1,5 +1,5 @@
 
-main.layout-width {
+.download main.layout-width {
   width: 100%;
   margin: 0 auto;
   background: blue url(../assets/img/download_bg.jpg) no-repeat center center;
