--- a/client/default.hbs
+++ b/client/default.hbs
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html id="{{htmlId}}">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta http-equiv="cache-control" content="no-cache, no-store"/>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
     <meta name="description" content="{{description}}">
     <meta name="keywords" content="{{keywords}}">
     <title>{{title}}</title>
+    {{{scriptInline}}}
 </head>
 <body>
 <div id="react-container" class="{{rootClass}}">{{{content}}}</div>
