--- a/client/page/downloadApp.css
+++ b/client/page/downloadApp.css
@@ -1,18 +1,18 @@
-
-.download main.layout-width {
+.downloadPage main.layout-width {
   width: 100%;
   margin: 0 auto;
   background: blue url(../assets/img/download_bg.jpg) no-repeat center center;
   background-size: cover;
 }
 
-.download-section{
-  h2{
+.download{
+
+  &-h2{
     font-size: 0.36rem;
     color: #ffffff;
   }
 
-  h3{
+  &-h3{
     font-size: 0.36rem;
     font-weight: normal;
     font-stretch: normal;
@@ -23,13 +23,13 @@
     text-align: right;
   }
 
-  .qrcode{
+  &-qrcode{
     width: 280px;
     height: 280px;
     margin-top: 45px;
   }
 
-  .btn{
+  &-btn{
     width: 280px;
     height: 72px;
     background-color: rgba(0, 0, 0, 0.14);
@@ -39,6 +39,5 @@
     font-size: 24px;
     color: #ffffff;
     margin-top: 45px;
-
   }
 }
