--- a/client/layout/mainLayout.css
+++ b/client/layout/mainLayout.css
@@ -1,83 +1,110 @@
-:root {
-  --active-color: #065aa6;
-}
-
-.layout-width{
+.layout-width {
   width: 1200px;
   margin: 0 auto;
 }
 
-header {
+#mobile .layout-width {
+  width: 100%;
+}
+
+.header {
   color: white;
+  box-shadow: 0px 2px 10px 0px rgba(106, 106, 106, 0.28);
 
-
-  .header-top {
+  &-top {
     background: black;
     font-size: 0.12rem;
     padding-top: 16px;
     padding-bottom: 16px;
   }
 
-  .header-menu {
+  &-menu {
     background-color: white;
-    box-shadow: 0px 2px 10px 0px rgba(106, 106, 106, 0.28);
 
-    &>div{
-      height: 60px;
+    & > div {
+      height: 0.6rem;
     }
   }
 
-  .logo-title {
+  &-logo-title {
     font-size: 0.24rem;
     color: #065aa6;
   }
 
-  .header-menu-ul{
+  &-menu-links {
     height: 100%;
+    margin-left: 90px;
   }
 
-  .menu-item {
+  &-menu-item {
     color: #666666;
     height: 100%;
     padding-left: 18px;
     padding-right: 18px;
     vertical-align: middle;
-    white-space:nowrap;
-
+    white-space: nowrap;
 
     &.active {
-      border-bottom: solid 2px var(--active-color);
-      color: var(--active-color);
+      border-bottom: solid 2px #065aa6;
+      color: #065aa6;
     }
-
   }
 }
 
-main{
-  padding-top: 34px;
-  padding-bottom: 40px;
+#mobile {
+  .header  {
+
+    &-menu {
+      border-bottom: solid 1px #D9D9D9;
+      padding-left: 0.1rem;
+      padding-right: 0.1rem;
+    }
+
+    &-menu-links {
+      padding-left: 0.1rem;
+      padding-right: 0.1rem;
+      background-color: white;
+      height: 0.48rem;
+      margin-left: 0;
+    }
+  }
+}
+
+main {
+  padding-top: 0.34rem;
+  padding-bottom: 0.4rem;
   flex: 1 0 auto;
 }
 
-footer{
+#mobile main {
+  padding-top: 0.1rem;
+  padding-bottom: 0;
+  flex: 1 0 auto;
+}
+
+footer {
   background: #1f2933;
 
-  &>div{
+  & > div {
     color: white;
     height: 110px;
   }
 
-  .logo-title{
+  .logo-title {
     font-size: 0.37rem;
   }
 
-  .contact{
+  .contact {
     font-size: 0.14rem;
     font-weight: normal;
   }
 }
 
-.section-wrapper{
+#mobile footer{
+  display: none;
+}
+
+.section-wrapper {
   background-color: #ffffff;
   box-shadow: 0px 2px 5px 0px rgba(134, 134, 134, 0.35);
   border-radius: 3px;
@@ -86,4 +113,6 @@ footer{
 .left-wrapper {
   width: 320px;
   flex-basis: 320px;
+  margin-left: 0.2rem;
 }
+
