删除不要的代码

--- a/client/default.hbs
+++ b/client/default.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="{{htmlId}}">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
@@ -13,7 +13,7 @@
     {{{scriptInline}}}
 </head>
 <body>
-<div id="react-container" class="{{rootClass}}">{{{content}}}</div>
+<div id="react-container">{{{content}}}</div>
 <script id="INITIAL_STATE">window.__INITIAL_STATE__ = {{{initialState}}}</script>
 </body>
 </html>
