--- a/client/css/reboot.css
+++ b/client/css/reboot.css
@@ -1,23 +1,12 @@
 html {
-  font-size: 625%;
+  font-size: 62.5%;
 }
 
-body {
-  font-family: "Microsoft Yahei", "Helvetica Neue", "宋体", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 0.16rem;
-  background-color: #f2f2f2;
+body{
+  background-color: #e1e1e1;
 }
 
-html,body,#react-container{
-  height: 100%;
-}
-
-#react-container{
-  display: flex;
-  flex-direction: column;
-}
-
-a {
-  cursor: pointer;
+a:active,a:hover,a:focus,a:focus-within{
   text-decoration: none;
+  outline:0;
 }
