--- a/client/page/index.css
+++ b/client/page/index.css
@@ -1,85 +1,5 @@
 @import "../css/reboot.css";
 
-.topic-header{
-  padding: 1rem;
-  background-color: #f6f6f6;
-  border-radius: 3px 3px 0 0;
-}
-
-.topic-tab{
-  margin: 0 1rem;
-  color: #80bd01;
-
-  &.current-tab{
-    background-color: #80bd01;
-    color: #fff;
-    padding: 3px 4px;
-    border-radius: 3px;
-  }
-}
-
-.cell {
-  font-size: 1.4rem;
-  padding: 10px;
-  background: #fff;
-  border-top: 1px solid #f0f0f0;
-
-  &:nth-child(1){
-    border-top: none;
-
-  }
-}
-
-.user_avatar {
-  img{
-    width: 30px;
-    height: 30px;
-    border-radius: 3px;
-  }
-}
-
-.reply_count {
-  width: 70px;
-  display: inline-block;
-  text-align: center;
-  color:#9e78c0;
-}
-
-reply_count{
-}
-
-.count_seperator {
-  font-size: 1.0rem;
-}
-
-.count_of_visits {
-  font-size: 1.0rem;
-  color: #b4b4b4;
-}
-
-.user_small_avatar{
-  height: 18px;
-  width: 18px;
-  vertical-align: middle;
-  margin-right: .5em;
-  border-radius: 3px;
-}
-
-.topiclist-tab {
-  background-color: #e5e5e5;
-  color: #999;
-  padding: 2px 4px;
-  border-radius: 3px;
-  font-size: 1.2rem;
-  margin-right: 2px;
-}
-
-.put-top{
-  background: #80bd01;
-  padding: 2px 4px;
-  border-radius: 3px;
-  color: #fff;
-  font-size: 1.2rem;
-  margin-right: 2px;
-
+.main-wp {
+  //padding: 0 20px;
 }
