min-width: 18px;

--- a/client/page/components/HotNews.css
+++ b/client/page/components/HotNews.css
@@ -3,6 +3,7 @@
     &-index{
         background:#f19702;
         width: 18px;
+        min-width: 18px;
         height: 18px;
         line-height: 18px;
         border-radius: 50%;
